src/test/ui/did_you_mean/issue-38147-2.rs
struct Bar<'a> {
    s: &'a String
}

impl<'a> Bar<'a> {
    fn f(&mut self) {
        self.s.push('x');
        //~^ ERROR cannot borrow borrowed content `*self.s` of immutable binding as mutable
    }
}

fn main() {}
